[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "clockwork-cli"
version = "0.2.0"
description = "Mine your Claude Code and Codex session logs to estimate active time"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
keywords = ["claude", "codex", "productivity", "time-tracking", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/danielsich/clockwork"
Repository = "https://github.com/danielsich/clockwork"

[project.scripts]
clockwork = "clockwork_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
